[gd_scene load_steps=2 format=3 uid="uid://d0nl0hevuq4wv"]

[ext_resource type="Script" uid="uid://d0orlbfckbxs4" path="res://Systems/test_node.gd" id="1_4csnm"]

[node name="TestNode" type="Node"]
script = ExtResource("1_4csnm")

[node name="FileTest" type="Button" parent="."]
offset_left = 26.0
offset_top = 27.0
offset_right = 98.0
offset_bottom = 58.0
text = "Test File"

[node name="GenDungeonTest" type="Button" parent="."]
offset_left = 24.0
offset_top = 106.0
offset_right = 174.0
offset_bottom = 137.0
text = "generate dungeon"

[node name="InventoryTest" type="Button" parent="."]
offset_left = 25.0
offset_top = 188.0
offset_right = 251.0
offset_bottom = 219.0
text = "Attach Weapon to Inventory"

[node name="MobSpawnTest" type="Button" parent="."]
offset_left = 27.0
offset_top = 262.0
offset_right = 125.0
offset_bottom = 293.0
text = "spawn test mob"

[connection signal="pressed" from="FileTest" to="." method="_on_file_test_pressed"]
[connection signal="pressed" from="GenDungeonTest" to="." method="_on_gen_dungeon_test_pressed"]
[connection signal="pressed" from="InventoryTest" to="." method="_on_inventory_test_pressed"]
[connection signal="pressed" from="MobSpawnTest" to="." method="_on_mob_spawn_test_pressed"]
